add more setup for deno

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,10 @@
 {
-  "image": "denoland/deno:latest"
+  "image": "denoland/deno:latest",
+  "postCreateCommand": "bash .devcontainer/setup.sh",
+  "containerEnv": {
+    "SHELL": "/usr/bin/zsh"
+},
+"extensions": [
+	"denoland.vscode-deno"
+]
 }
